# Agent_live2d

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRACT.md  Dockerfile  README.md  TASK.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
app/: __init__.py  main.py
e2e/: chat-smoke.spec.ts  skill-terminology.spec.ts  typed-params-backend-validation.spec.ts
scripts/: check-text-encoding.mjs  desktop-doctor.mjs  dev-port-utils.mjs  local-experience.mjs  release-smoke.mjs  startup-port-smoke.mjs  tauri-dev-safe.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  test_catalog_api.py  test_conversations_api.py  test_cors.py  test_file_access_guard.py  test_generation_coordinator.py  test_health.py  test_manual_tools_and_settings_api.py  test_mcp_file_access_guard.py  test_mcp_probe_policy.py  test_mcp_runtime_pool.py  test_memory_delete_api.py  test_memory_scope_and_degrade_api.py  test_message_provider_error_api.py  test_message_provider_tool_call_api.py  test_message_request_id_idempotency_api.py  test_message_runtime_model_override_api.py  test_message_stop_regenerate_consistency_api.py  test_messages_dedupe_api.py  test_ops_command_agent.py  test_ops_command_api.py  test_ops_mcp_install_api.py  (+10 more)
(+239 files in other folders)
